fix gameboard spacing to render in 4x3 grid

--- a/mern/client/src/components/Card.css
+++ b/mern/client/src/components/Card.css
@@ -5,10 +5,10 @@
   width: 300px;
   border-radius: 20px;
   justify-content: center;
+  margin: 15px;
 }
 
 .CardSymbol {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
